# eyemcp

./: .gitignore  README.md  TESTING.md  calibration.csv  calibration.py  eval_calibration.py  main.py  pyproject.toml  vision.py
apks/: org.moire.opensudoku_20250430.apk  org.secuso.privacyfriendlyminesweeper_3.apk
scripts/: README.md  server_status.sh  start_android.sh  stop_android.sh
tests/: conftest.py  test_calibration.py  test_main.py  test_swipe.py  test_vision.py
